# Ledgerlens-contract

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  TODO.md  rewrite_tests.py
contracts/ledgerlens-aggregator/: Cargo.toml
contracts/ledgerlens-aggregator/src/: lib.rs  test.rs
contracts/ledgerlens-score/: Cargo.toml  TODO_MODEL_VERSION_GOVERNANCE.md  build.rs
contracts/ledgerlens-score/benches/: batch_submit.rs
contracts/ledgerlens-score/src/: constants.rs  error_coverage.rs  errors.rs  event_emission.rs  events.rs  gdpr_accumulator.rs  lib.rs  parameter_governance.rs  storage.rs  test.rs  test_adaptive_epsilon.rs  test_adaptive_rate_limit.rs  test_admin_multisig.rs  test_admin_rotation.rs  test_aggregate_invariants.rs  test_attestation.rs  test_batch_attestation.rs  test_batch_ttl_optimization.rs  test_bayesian.rs  test_breach_counter_reset.rs  test_chaos_pause.rs  test_cluster_boundaries.rs  test_confidence_gate.rs  test_consensus.rs  test_cooldown.rs  test_cooldown_period.rs  test_decay.rs  test_dispute.rs  test_dual_key_pubkey.rs  test_embargo.rs  test_epoch.rs  test_fee_withdrawal.rs  test_finality_buffer.rs  test_flash_protection.rs  test_fuzz_submit_score.rs  test_gate_enforcement.rs  test_governance_chain.rs  test_heartbeat.rs  test_histogram.rs  test_history_paginated.rs  (+31 more)
contracts/ledgerlens-score/test_snapshots/test/: test_1_of_1_behaves_like_original.1.json  test_add_link_is_bidirectional.1.json  test_add_signer_beyond_max_rejected.1.json  test_aggregate_equal_weights.1.json  test_aggregate_flag_counts.1.json  test_aggregate_max_pair_tracked.1.json  test_aggregate_overflow_protection.1.json  test_aggregate_pair_deduplication.1.json  test_aggregate_single_pair.1.json  test_aggregate_updates_on_rescore.1.json  test_aggregate_weight_zero_excluded.1.json  test_aggregate_weighted.1.json  test_batch_also_populates_score_history.1.json  test_batch_blocked_when_paused.1.json  test_batch_result_all_accepted.1.json  test_batch_result_all_rejected.1.json  test_batch_result_index_correct.1.json  test_batch_result_mixed.1.json  test_batch_result_vec_length_matches_input.1.json  test_cancel_admin_transfer.1.json  test_cancel_without_pending_fails.1.json  test_clear_history_does_not_affect_latest_score.1.json  test_clear_score_does_not_affect_history.1.json  test_clear_score_does_not_affect_other_pairs.1.json  test_clear_score_history_on_empty_is_noop.1.json  test_clear_score_history_removes_all_entries.1.json  test_clear_score_on_nonexistent_is_noop.1.json  test_clear_score_removes_latest_score.1.json  test_contagion_boost_capped_at_100.1.json  test_contagion_boosts_linked_wallets.1.json  test_contagion_bypasses_rate_limits.1.json  test_contagion_depth_returns_graph_degree.1.json  test_contagion_does_not_affect_unlinked_wallets.1.json  test_contagion_events_per_affected_wallet.1.json  test_contagion_missing_score_treated_as_zero.1.json  test_counterparty_link_cap_enforced.1.json  test_cyclic_delegation_rejected.1.json  test_default_history_depth_is_10.1.json  test_default_staleness_window_is_7_days.1.json  test_delegate_direct_score_overrides_delegation.1.json  (+63 more)
contracts/ledgerlens-score/test_snapshots/test_admin_multisig/: test_add_admin_signer_duplicate.1.json  test_add_admin_signer_full.1.json  test_add_first_admin_signer_in_legacy_mode.1.json  test_admin_multisig_init_state.1.json  test_pause_unpause_multisig.1.json  test_remove_admin_signer_auto_adjusts_threshold.1.json  test_remove_admin_signer_not_in_set.1.json  test_require_admin_auth_insufficient_signers.1.json  test_require_admin_auth_multisig_success.1.json  test_require_admin_auth_signer_not_in_set.1.json  test_require_admin_auth_zero_signers_in_multisig_mode.1.json  test_set_admin_threshold_validation.1.json  test_transfer_admin_multisig.1.json
contracts/ledgerlens-score/test_snapshots/test_attestation/: test_get_service_pubkey_before_set_fails.1.json  test_set_and_get_service_pubkey_compressed.1.json  test_set_and_get_service_pubkey_uncompressed.1.json  test_set_service_pubkey_before_init_fails.1.json  test_set_service_pubkey_rejects_invalid_length.1.json  test_set_service_pubkey_rotates.1.json  test_submit_score_attestation_required_even_when_pubkey_set_after_first_submission.1.json  test_submit_score_signed_by_wrong_key_rejected.1.json  test_submit_score_with_attestation_for_different_payload_rejected.1.json  test_submit_score_with_out_of_range_recovery_id_rejected.1.json  test_submit_score_with_pubkey_configured_requires_attestation.1.json  test_submit_score_with_tampered_commitment_field_rejected.1.json  test_submit_score_with_valid_attestation_compressed_pubkey_succeeds.1.json  test_submit_score_with_valid_attestation_uncompressed_pubkey_succeeds.1.json  test_submit_score_without_pubkey_configured_allows_missing_attestation.1.json
contracts/ledgerlens-score/test_snapshots/test_batch_attestation/: test_batch_attested_contract_paused_rejected.1.json  test_batch_attested_requires_service_auth.1.json  test_batch_attested_respects_rate_limit.1.json  test_merkle_root_signature_mismatch_rejects_all.1.json  (+7 more)
contracts/mock-amm/: Cargo.toml
contracts/mock-amm/src/: lib.rs  test.rs
contracts/mock-lending/: Cargo.toml
contracts/mock-lending/src/: lib.rs
tests/composability/: Cargo.toml
tests/composability/tests/: integration_lifecycle.rs  test_composability.rs
tools/replay/: Cargo.toml  README.md
tools/replay/src/: main.rs
tools/replay/testdata/: reference.ndjson
tools/replay/tests/: integration_test.rs
(+314 files in other folders)
