[workspace]
resolver = "2"
members = [
    "contracts/ledgerlens-score",
    "contracts/mock-amm",
    "contracts/mock-lending",
    "tools/replay",
    "tests/composability",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
strip = "symbols"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
