[package]
name = "ledgerlens-score"
version = "0.1.0"
edition = "2021"
publish = false
description = "On-chain risk score registry for LedgerLens"
repository = "https://github.com/ledgerlens/contract"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = true

[dependencies]
soroban-sdk = "21.0.0"
subtle = { version = "2.6", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
# Used only by tests, to produce real secp256k1 ECDSA signatures that
# exercise `verify_attestation` end-to-end (see `test_attestation.rs`).
k256 = { version = "0.13.4", features = ["ecdsa"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "batch_submit"
harness = false
path = "benches/batch_submit.rs"

[features]
testutils = ["soroban-sdk/testutils"]

# Reference integration showing how a third-party contract gates on a
# LedgerLens risk score. Built as a library (it is a Soroban contract, not a
# `fn main` binary) via: cargo build --example amm_gate -p ledgerlens-score
[[example]]
name = "amm_gate"
path = "../../examples/amm_gate.rs"
crate-type = ["lib"]

[[example]]
name = "amm_gate_example"
path = "../../examples/amm_gate_example.rs"
crate-type = ["lib"]
